# logger

./: .autoexec.vim  Makefile.am  README.md  configure.ac  logger.c  logger.h  logger.pc.in  main.c  makefile
src/: logger.c  logger.h  main.c
